--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="El Vuelo del Cuervo - Banda de rock Argentina - Discrografía">
+    <meta name="keywords" content="rock, rock alternativo, música, vuelo del cuervo, rock under, rock 1990, rock 1980, rock 1970">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="imagenes/favicon.png" />
